--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
+                tools:ignore="MissingConstraints"
                 tools:layout_editor_absoluteY="72dp" />
 
             <EditText
@@ -57,6 +58,7 @@
                 android:textColorHint="@color/black"
                 android:textSize="24dp"
                 android:textStyle="bold"
+                tools:ignore="MissingConstraints"
                 tools:layout_editor_absoluteX="24dp"
                 tools:layout_editor_absoluteY="166dp" />
 
@@ -80,6 +82,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/inputEmail"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/inputEmail"
+                tools:ignore="MissingConstraints"
                 tools:layout_editor_absoluteY="230dp" />
 
             <TextView
@@ -98,14 +101,43 @@
                 android:id="@+id/btnLogin"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:background="@drawable/input_bg"
                 android:text="Login"
                 android:textColor="@color/black"
-                android:background="@drawable/input_bg"
                 app:layout_constraintEnd_toEndOf="@+id/inputPassword"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/inputPassword"
+                tools:ignore="MissingConstraints"
                 tools:layout_editor_absoluteY="352dp" />
 
+            <TextView
+                android:id="@+id/createNewAccount"
+                android:layout_width="210dp"
+                android:layout_height="34dp"
+                android:text=" register new account?"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/btnLogin"
+                app:layout_constraintStart_toStartOf="@+id/btnLogin"
+                app:layout_constraintTop_toBottomOf="@+id/btnLogin"
+                app:layout_constraintVertical_bias="0.051" />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="OR"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="@+id/btnLogin"
+                app:layout_constraintStart_toStartOf="@+id/btnLogin"
+                tools:layout_editor_absoluteY="553dp" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                android:background="colo"
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
