--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,19 +25,20 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/font"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Login"
+                android:text="@string/login"
                 android:textColor="@color/black"
                 android:textSize="44sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
+                tools:ignore="MissingConstraints"
                 tools:layout_editor_absoluteY="72dp" />
 
             <EditText
@@ -45,9 +46,9 @@
                 android:layout_width="363dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/input_bg"
-                android:drawableLeft="@drawable/baseline_email_24"
+                android:drawableStart="@drawable/baseline_email_24"
                 android:ems="10"
-                android:hint=" Email"
+                android:hint="@string/email"
                 android:inputType="textEmailAddress"
                 android:paddingLeft="19dp"
                 android:paddingTop="12dp"
@@ -55,8 +56,9 @@
                 android:paddingBottom="12dp"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
-                android:textSize="24dp"
+                android:textSize="24sp"
                 android:textStyle="bold"
+                tools:ignore="MissingConstraints"
                 tools:layout_editor_absoluteX="24dp"
                 tools:layout_editor_absoluteY="166dp" />
 
@@ -65,9 +67,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/input_bg"
-                android:drawableLeft="@drawable/baseline_security_24"
+                android:drawableStart="@drawable/baseline_security_24"
                 android:ems="10"
-                android:hint=" Password"
+                android:hint="@string/password"
                 android:inputType="textPassword"
                 android:paddingLeft="19dp"
                 android:paddingTop="12dp"
@@ -80,6 +82,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/inputEmail"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/inputEmail"
+                tools:ignore="MissingConstraints"
                 tools:layout_editor_absoluteY="230dp" />
 
             <TextView
@@ -87,9 +90,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="Forgot Password?"
+                android:text="@string/forgot_password"
                 android:textColor="@color/black"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@+id/inputPassword"
                 app:layout_constraintTop_toBottomOf="@+id/inputPassword" />
@@ -98,12 +101,13 @@
                 android:id="@+id/btnLogin"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Login"
+                android:background="White"
+                android:text="@string/login"
                 android:textColor="@color/black"
-                android:background="@drawable/input_bg"
                 app:layout_constraintEnd_toEndOf="@+id/inputPassword"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/inputPassword"
+                tools:ignore="MissingConstraints"
                 tools:layout_editor_absoluteY="352dp" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
