--- a/app/src/main/res/layout/store_menu.xml
+++ b/app/src/main/res/layout/store_menu.xml
@@ -1,13 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#4CAF50">
 
-    <TextView
-        android:id="@+id/pg1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Page 1"
-        android:textSize="20sp" />
-</RelativeLayout>
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="416dp"
+        android:layout_height="594dp"
+        app:srcCompat="@android:drawable/toast_frame"
+        tools:layout_editor_absoluteX="-3dp"
+        tools:layout_editor_absoluteY="68dp" />
+
+    <ImageButton
+        android:id="@+id/button1"
+        android:layout_width="425dp"
+        android:layout_height="123dp"
+        android:backgroundTint="#FFFFFF"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ShopRite"
+        tools:layout_editor_absoluteX="-5dp"
+        tools:layout_editor_absoluteY="101dp" />
+
+    <ImageButton
+        android:id="@+id/button2"
+        android:layout_width="426dp"
+        android:layout_height="119dp"
+        android:backgroundTint="#FFFFFF"
+        android:scaleType="fitCenter"
+        android:src="@drawable/PriceRite"
+        tools:layout_editor_absoluteX="-8dp"
+        tools:layout_editor_absoluteY="241dp" />
+
+    <ImageButton
+        android:id="@+id/button3"
+        android:layout_width="426dp"
+        android:layout_height="125dp"
+        android:backgroundTint="#FFFFFF"
+        android:scaleType="fitCenter"
+        android:src="@drawable/FreshGrocer"
+        tools:layout_editor_absoluteX="-12dp"
+        tools:layout_editor_absoluteY="379dp" />
+
+    <ImageButton
+        android:id="@+id/button6"
+        android:layout_width="422dp"
+        android:layout_height="116dp"
+        android:backgroundTint="#FFFFFF"
+        android:scaleType="fitCenter"
+        android:src="@drawable/GourmetGrocer"
+        tools:layout_editor_absoluteX="-6dp"
+        tools:layout_editor_absoluteY="521dp" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
