--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -137,7 +137,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
-                android:background="colo"
+                android:background="color"
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
