--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-
+    tools:context=".Register">
     <View
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -20,18 +18,44 @@
         android:id="@+id/forgotPassword"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:fillViewport="true"
+        tools:layout_editor_absoluteX="-63dp"
+        tools:layout_editor_absoluteY="-36dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/font"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <EditText
+                android:id="@+id/confirmPassword"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/input_bg"
+                android:drawableLeft="@drawable/baseline_security_24"
+                android:ems="10"
+                android:hint="Confirm Password"
+                android:inputType="textPassword"
+                android:paddingLeft="19dp"
+                android:paddingTop="12dp"
+                android:paddingRight="19dp"
+                android:paddingBottom="12dp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
+                android:textSize="24dp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="@+id/inputEmail"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/inputEmail"
+                app:layout_constraintTop_toBottomOf="@+id/inputPassword"
+                tools:ignore="MissingConstraints" />
+
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Login"
+                android:text="Register"
                 android:textColor="@color/black"
                 android:textSize="44sp"
                 android:textStyle="bold"
@@ -45,6 +69,7 @@
                 android:id="@+id/inputEmail"
                 android:layout_width="363dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:background="@drawable/input_bg"
                 android:drawableLeft="@drawable/baseline_email_24"
                 android:ems="10"
@@ -58,14 +83,15 @@
                 android:textColorHint="@color/black"
                 android:textSize="24dp"
                 android:textStyle="bold"
+                app:layout_constraintTop_toBottomOf="@+id/textView"
                 tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteX="24dp"
-                tools:layout_editor_absoluteY="166dp" />
+                tools:layout_editor_absoluteX="24dp" />
 
             <EditText
                 android:id="@+id/inputPassword"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:background="@drawable/input_bg"
                 android:drawableLeft="@drawable/baseline_security_24"
                 android:ems="10"
@@ -82,65 +108,41 @@
                 app:layout_constraintEnd_toEndOf="@+id/inputEmail"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/inputEmail"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteY="230dp" />
-
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="Forgot Password?"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="@+id/inputPassword"
-                app:layout_constraintTop_toBottomOf="@+id/inputPassword" />
+                app:layout_constraintTop_toBottomOf="@+id/inputEmail"
+                tools:ignore="MissingConstraints" />
 
             <Button
-                android:id="@+id/btnLogin"
+                android:id="@+id/btnregister"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/input_bg"
-                android:text="Login"
+                android:text="Register"
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="@+id/inputPassword"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/inputPassword"
                 tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteY="352dp" />
+                tools:layout_editor_absoluteY="360dp" />
 
             <TextView
-                android:id="@+id/createNewAccount"
-                android:layout_width="210dp"
-                android:layout_height="34dp"
-                android:text=" register new account?"
+                android:id="@+id/accountExists"
+                android:layout_width="232dp"
+                android:layout_height="32dp"
+                android:text="Already have account?"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/btnLogin"
-                app:layout_constraintStart_toStartOf="@+id/btnLogin"
-                app:layout_constraintTop_toBottomOf="@+id/btnLogin"
-                app:layout_constraintVertical_bias="0.051" />
+                app:layout_constraintEnd_toEndOf="@+id/btnregister"
+                app:layout_constraintHorizontal_bias="0.496"
+                app:layout_constraintStart_toStartOf="@+id/btnregister"
+                app:layout_constraintTop_toBottomOf="@+id/btnregister"
+                app:layout_constraintVertical_bias="0.058">
 
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="OR"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="@+id/btnLogin"
-                app:layout_constraintStart_toStartOf="@+id/btnLogin"
-                tools:layout_editor_absoluteY="553dp"
-                tools:ignore="MissingConstraints" />
-
+            </TextView>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
 
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
