--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,13 +25,13 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/font"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Login"
+                android:text="@string/login"
                 android:textColor="@color/black"
                 android:textSize="44sp"
                 android:textStyle="bold"
@@ -46,9 +46,9 @@
                 android:layout_width="363dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/input_bg"
-                android:drawableLeft="@drawable/baseline_email_24"
+                android:drawableStart="@drawable/baseline_email_24"
                 android:ems="10"
-                android:hint=" Email"
+                android:hint="@string/email"
                 android:inputType="textEmailAddress"
                 android:paddingLeft="19dp"
                 android:paddingTop="12dp"
@@ -56,20 +56,21 @@
                 android:paddingBottom="12dp"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
-                android:textSize="24dp"
+                android:textSize="24sp"
                 android:textStyle="bold"
                 tools:ignore="MissingConstraints"
                 tools:layout_editor_absoluteX="24dp"
-                tools:layout_editor_absoluteY="166dp" />
+                tools:layout_editor_absoluteY="166dp"
+                android:autofillHints="Email" />
 
             <EditText
                 android:id="@+id/inputPassword"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/input_bg"
-                android:drawableLeft="@drawable/baseline_security_24"
+                android:drawableStart="@drawable/baseline_security_24"
                 android:ems="10"
-                android:hint=" Password"
+                android:hint="@string/password"
                 android:inputType="textPassword"
                 android:paddingLeft="19dp"
                 android:paddingTop="12dp"
@@ -77,22 +78,23 @@
                 android:paddingBottom="12dp"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
-                android:textSize="24dp"
+                android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@+id/inputEmail"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/inputEmail"
                 tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteY="230dp" />
+                tools:layout_editor_absoluteY="230dp"
+                android:autofillHints="Password" />
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="Forgot Password?"
+                android:text="@string/forgot_password"
                 android:textColor="@color/black"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@+id/inputPassword"
                 app:layout_constraintTop_toBottomOf="@+id/inputPassword" />
@@ -102,7 +104,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/input_bg"
-                android:text="Login"
+                android:text="@string/login"
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="@+id/inputPassword"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -114,7 +116,7 @@
                 android:id="@+id/createNewAccount"
                 android:layout_width="210dp"
                 android:layout_height="34dp"
-                android:text=" register new account?"
+                android:text="@string/register_new_account"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -127,17 +129,19 @@
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="OR"
+                android:text="@string/or"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@+id/btnLogin"
                 app:layout_constraintStart_toStartOf="@+id/btnLogin"
-                tools:layout_editor_absoluteY="553dp" />
+                tools:layout_editor_absoluteY="553dp"
+                tools:ignore="MissingConstraints" />
             <View
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
                 android:background="color"
+                tools:ignore="MissingConstraints" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
