--- a/app/src/main/res/layout/zipcode.xml
+++ b/app/src/main/res/layout/zipcode.xml
@@ -14,4 +14,32 @@
         app:srcCompat="@android:drawable/toast_frame"
         tools:layout_editor_absoluteX="-3dp"
         tools:layout_editor_absoluteY="68dp" />
+
+    <EditText
+        android:id="@+id/editTextTextPersonName"
+        android:layout_width="266dp"
+        android:layout_height="47dp"
+        android:background="@drawable/input_bg"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="   Zip Code"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="107dp" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#00FFFFFF"
+        android:text="@string/search"
+        android:textColor="@color/black"
+        tools:layout_editor_absoluteX="300dp"
+        tools:layout_editor_absoluteY="110dp" />
+
+    <ListView
+        android:id="@+id/lv_stores"
+        android:layout_width="412dp"
+        android:layout_height="473dp"
+        tools:layout_editor_absoluteX="-2dp"
+        tools:layout_editor_absoluteY="169dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
