--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/login"
+                android:text="Login"
                 android:textColor="@color/black"
                 android:textSize="44sp"
                 android:textStyle="bold"
@@ -88,7 +88,7 @@
                 android:autofillHints="Password" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/forgotPassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
