--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -28,7 +28,7 @@
             android:layout_height="match_parent">
 
             <EditText
-                android:id="@+id/confirmPassword"
+                android:id="@+id/inputConfirmPassword"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -112,7 +112,7 @@
                 tools:ignore="MissingConstraints" />
 
             <Button
-                android:id="@+id/btnregister"
+                android:id="@+id/btnRegister"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/input_bg"
@@ -125,17 +125,17 @@
                 tools:layout_editor_absoluteY="360dp" />
 
             <TextView
-                android:id="@+id/accountExists"
+                android:id="@+id/createNewAccount"
                 android:layout_width="232dp"
                 android:layout_height="32dp"
                 android:text="Already have account?"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/btnregister"
+                app:layout_constraintEnd_toEndOf="@+id/btnRegister"
                 app:layout_constraintHorizontal_bias="0.496"
-                app:layout_constraintStart_toStartOf="@+id/btnregister"
-                app:layout_constraintTop_toBottomOf="@+id/btnregister"
+                app:layout_constraintStart_toStartOf="@+id/btnRegister"
+                app:layout_constraintTop_toBottomOf="@+id/btnRegister"
                 app:layout_constraintVertical_bias="0.058">
 
             </TextView>
