--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -72,7 +72,9 @@
                 android:id="@+id/inputEmail"
                 android:layout_width="363dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="24dp"
                 android:background="@drawable/input_bg"
                 android:drawableLeft="@drawable/baseline_email_24"
                 android:ems="10"
@@ -86,9 +88,10 @@
                 android:textColorHint="@color/black"
                 android:textSize="24dp"
                 android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteX="24dp" />
+                tools:ignore="MissingConstraints" />
 
             <EditText
                 android:id="@+id/inputPassword"
