--- a/app/src/main/res/layout/zipcode.xml
+++ b/app/src/main/res/layout/zipcode.xml
@@ -11,9 +11,11 @@
         android:id="@+id/imageView3"
         android:layout_width="416dp"
         android:layout_height="594dp"
-        app:srcCompat="@android:drawable/toast_frame"
-        tools:layout_editor_absoluteX="-3dp"
-        tools:layout_editor_absoluteY="68dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/toast_frame" />
 
     <EditText
         android:id="@+id/edit_zip"
@@ -23,23 +25,30 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="   Zip Code"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="107dp" />
+        app:layout_constraintBottom_toTopOf="@+id/lv_stores"
+        app:layout_constraintEnd_toStartOf="@+id/btn_getzip"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
     <Button
         android:id="@+id/btn_getzip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
         android:background="#00FFFFFF"
         android:text="@string/search"
         android:textColor="@color/black"
-        tools:layout_editor_absoluteX="300dp"
-        tools:layout_editor_absoluteY="110dp" />
+        app:layout_constraintBottom_toTopOf="@+id/lv_stores"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
     <ListView
         android:id="@+id/lv_stores"
         android:layout_width="412dp"
         android:layout_height="473dp"
-        tools:layout_editor_absoluteX="-2dp"
-        tools:layout_editor_absoluteY="169dp" />
+        android:layout_marginTop="136dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
