--- a/app/src/main/res/layout/storelist.xml
+++ b/app/src/main/res/layout/storelist.xml
@@ -60,10 +60,32 @@
         app:layout_constraintStart_toStartOf="@+id/imageView3"
         app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
-    <ListView
-        android:id="@+id/lv_stores"
-        android:layout_width="412dp"
-        android:layout_height="473dp"
-        tools:layout_editor_absoluteX="-2dp"
-        tools:layout_editor_absoluteY="169dp" />
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="382dp"
+        android:layout_height="89dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="107dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="396dp"
+        android:text="Store: Shoprite Address:  350 Canal St, Atlantic City, 08405   Phone: 848-498-5687"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+        app:layout_constraintEnd_toEndOf="@+id/imageView3"
+        app:layout_constraintStart_toStartOf="@+id/imageView3"
+        app:layout_constraintTop_toTopOf="@+id/imageView3" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="383dp"
+        android:layout_height="87dp"
+        android:layout_marginTop="232dp"
+        android:layout_marginBottom="275dp"
+        android:text="Store: Shoprite Address:  8161 Steam St, Atlantic City, 08405   Phone: 848-485-9892"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+        app:layout_constraintTop_toTopOf="@+id/imageView3"
+        tools:layout_editor_absoluteX="14dp" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
