--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,8 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:fillViewport="true"
+        tools:ignore="DuplicateIds">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/font"
@@ -107,7 +108,7 @@
                 android:layout_marginStart="235dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="23dp"
-                android:text="forgot_password"
+                android:text="forgot password?"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
